Add student and teacher activity and a little database code

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".TeacherActivity"
+            android:label="@string/manage_course"
+            android:parentActivityName=".MainActivity"/>
+        <activity android:name=".StudentActivity"
+            android:parentActivityName=".MainActivity"></activity>
     </application>
 
 </manifest>
