--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,10 +4,15 @@
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission
+        android:name="android.permission.INTERNET"
+        android:required="true" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_new"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -32,7 +37,9 @@
             android:authorities="com.example.keynes.rollcall"
             android:exported="false" />
 
-        <activity android:name=".CourseEditorActivity"></activity>
+        <activity android:name=".CourseEditorActivity" />
+        <activity android:name=".StudentEditorActivity" />
+        <activity android:name=".StudentActionActivity"></activity>
     </application>
 
 </manifest>
